# plover_console_ui

./: README.rst  main.py  setup.cfg
.github/workflows/: python-app.yml  release.yml
plover_console_ui/: add_translation.py  application.py  commander.py  commands.py  config.py  console_engine.py  dictionary_filter.py  focus.py  layout.py  notification.py  output.py  plugin.py  presentation.py  suggestions.py  tape.py
plover_tui/: addtranslation.py  commander.py  commands.py  config.py  focus.py  layout.py  lookup.py  main.py  notification.py  papertape.py  plugin.py  presentation.py  suggestions.py  tuiengine.py  viewcommon.py
