[metadata]
name = plover_tui
version = 0.0.1
description = Text User Interface for Plover
long_description = file: README.rst
author = Seth Rider
author_email = seth.rider@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/psethwick/plover_tui
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: Apache License 2.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin tui

[options]
zip_safe = True
include_package_data = True
install_requires = 
    plover>=4.0.0.dev7
    asciimatics>=1.12.0
packages = plover_tui

[options.entry_points]
plover.gui = tui = plover_tui.main
