[metadata]
name = plover_console_ui
version = 1.2.0
description = Text User Interface for Plover
long_description = file: README.rst
author = Seth Rider
author_email = seth.rider@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/psethwick/plover_console_ui
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin cli

[options]
zip_safe = True
include_package_data = True
install_requires = 
    plover>=4.0.0.dev7
    prompt-toolkit>=3.0.8
packages = plover_console_ui

[options.entry_points]
plover.gui = console = plover_console_ui.plugin
